--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,7 +21,7 @@
     "react-spinners": "^0.14.1",
     "react-tooltip": "^5.28.0",
     "redux": "^5.0.1",
-    "swiper": "^11.1.15",
+    "sass": "^1.83.1",
     "web-vitals": "^4.2.4",
     "yup": "^1.4.0"
   },
