--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@heyputer/puter.js": "^2.2.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.7",
